# Quec

./: .gitignore  MainWnd.glade  meson.build  test.sh
include/: project.h.in  tags.h
src/: main.cpp
src/Common/: Bass.cpp  Bass.h  Logger.cpp  Logger.h
src/MainWnd/: MainWnd.cpp  MainWnd.h  PlayList.cpp  PlayList.h
